# forwardemail-webhook-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.markdown
ci/: release.yml  set-pipeline
fixtures/: forwardemail.json
src/: main.rs
