[package]
name = "forwardemail-webhook-rs"
description = "Webhook server for emails reveived via forwardemail.net"
authors = [ "Steffen Uhlig <steffen@familie-uhlig.net>" ]
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
clap = { version = "3.0.14", features = ["derive", "cargo"] }
log = "0"
simple_logger = "2.1.0"
