[package]
name = "forwardemail-webhook-rs"
description = "Webhook server for emails reveived via forwardemail.net"
authors = [ "Steffen Uhlig <steffen@familie-uhlig.net>" ]
version = "1.0.2"
edition = "2021"
build = "build.rs"

[dependencies]
actix-web = "4.1.0"
actix-files = "0.6.1"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
clap = { version = "3.2.5", features = ["derive", "cargo"] }
log = "0.4.17"
simple_logger = "2.1.0"
actix-web-httpauth = "0.6.0"

[build-dependencies]
built = { version = "0.5.1", features = ["git2"] }
